Fix safari panel wrapping

--- a/source/assets/stylesheets/_elements/panels.styl
+++ b/source/assets/stylesheets/_elements/panels.styl
@@ -54,13 +54,13 @@
     ul
       display: flex
       flex-wrap: wrap
-      margin-left: -2%
+      margin-left: (0 - space.md)
       margin-top: (0 - space.md)
 
     li
-      margin-left: 2%
+      margin-left: space.md - .5px // Workaround for Safari
       margin-top: space.md
-      width: 48%
+      width: calc(50% - 24px)
 
       &:first-child
         margin-top: space.md
